project(str)
# 
# set(CMAKE_C_COMPILER      arm-linux-gcc   )
# set(CMAKE_CXX_COMPILER  arm-linux-g++  )
# set(CMAKE_LINKER                arm-linux-ld     )

# set(EXECUTABLE_OUTPUT_PATH /mnt/hgfs/share-2)

# add_executable(str main.c)
# 
# 
# add_executable(str_eth a.c)
# 
# add_executable(test b.c)
# 
# 
add_executable(run  main.c)


# target_link_libraries(round m  )